tree-sitter-asciidoc_inline/test/corpus/constrained_formatting.txt
==================================================
unpaired hash is not highlight
==================================================

issue #2 ok

--------------------------------------------------

(inline
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word)))

==================================================
underscores in an identifier are not italic
==================================================

do_something_useful x

--------------------------------------------------

(inline
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word)))

==================================================
lone asterisk is not emphasis
==================================================

a lone * star

--------------------------------------------------

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word)))

==========================================
word-internal delimiters stay inside a span
==========================================

_"COMP1010_TUT01_2025_S1"_ and *a_b_c*

-----

(inline
  (inline_element
    (italic))
  (inline_element
    (word))
  (inline_element
    (emphasis)))
