tree-sitter-asciidoc_inline/test/corpus/escaped.txt
====================
escaped
====================

this is a \*emphasis\* or in this form**em\*phasis**.
this is a \`italic\` or in this form``lta\`lic``is ok.
this is a \#italic\# or in this form\##lta\#lic\##is ok.

this is a \_`monospace` inside italic\_ code.

-----

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (emphasis))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (monospace))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (monospace))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word
      (escaped_sequence)))
  (inline_element
    (word))
  (inline_element))
