tree-sitter-asciidoc_inline/test/corpus/footnote.txt
====================
footnote
====================

this is a footnote:[text] or footnote:id[text] or footnote:id[] or footnoteref:[id,text] or footnoteref:[id]

This is afootnote:[text], but notstem.

-----

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (footnote
      (macro_name)
      (attr
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (footnote
      (macro_name)
      (target)
      (attr
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (footnote
      (macro_name)
      (target)))
  (inline_element
    (word))
  (inline_element
    (footnote
      (macro_name)
      (attr
        (positional_attr)
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (footnote
      (macro_name)
      (attr
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (footnote
      (macro_name)
      (attr
        (positional_attr))))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element))

====================
footnote containing a URL
====================

footnote:[https://example.com/source] after

-----

(inline
  (inline_element
    (footnote
      (macro_name)
      (attr
        (positional_attr
          (autolink
            (uri
              (link_url)))))))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word)))
