tree-sitter-asciidoc_inline/test/corpus/hard_line_break.txt
====================
hard line break
====================

text +

-----

(inline
  (inline_element
    (word))
  (inline_element
    (hard_wrap)))

====================
plus in passthrough is not hard line break
====================

+text+

-----

(inline
  (inline_element
    (passthrough)))

====================
plus without leading space is not hard line break
====================

text+

-----

(inline
  (inline_element
    (word))
  (inline_element
    (passthrough
      (MISSING "+"))))
