tree-sitter-asciidoc_inline/test/corpus/image_macro.txt
====================
image_macro
====================

this is a image:filename.png[Alt Text] or image:http://example.com/images/filename.png[Alt Text] or image:filename.png[More [Alt\] Text] (alt text becomes "More [Alt] Text") or icon:github[large]

-----

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (target)
      (attr
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (target)
      (attr
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (target)
      (attr
        (positional_attr))))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element)
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (target)
      (attr
        (positional_attr)))))
