tree-sitter-asciidoc_inline/test/corpus/inline_macro.txt
====================
inline_macro
====================

kbd:[Ctrl+Shift+T kbd:[Ctrl+Shift+T]]
this is kbd:[F3] or kbd:[Ctrl+Shift+T] or kbd:[Ctrl+\]] or kbd:[Ctrl,T] or btn:[Save].
this is kbd:{cpp}[F3] or kbd:[Ctrl+Shift+T] or kbd:[Ctrl+\]] or kbd:[Ctrl,T] or btn:[Save].

-----

(inline
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (target
        (attribute_reference
          (attribute_name)))
      (attr)))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr)))
  (inline_element))

==============
quote attr
==============

indexterm:[knight, "Arthur, King"]

------

(inline
  (inline_element
    (inline_macro
      (macro_name)
      (attr))))

===================
no space
===================

xxxxfootnote:xxxx[aaaa]

----

(inline
  (inline_element
    (word))
  (inline_element
    (footnote
      (macro_name)
      (target)
      (attr))))
