tree-sitter-asciidoc_inline/test/corpus/instrinsic_attribute.txt
=======================
intrinsic_attributes
=======================

this is a replacement {cpp}

---

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (intrinsic_attributes_pair
      (intrinsic_attributes))))
