tree-sitter-asciidoc_inline/test/corpus/kbd_macro.txt
====================
kbd_macro
====================

this is kbd:[F3] or kbd:[Ctrl+Shift+T] or kbd:[Ctrl+\]] or kbd:[Ctrl,T] or btn:[Save].

-----

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr
        (positional_attr)
        (positional_attr))))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (attr
        (positional_attr))))
  (inline_element))
