tree-sitter-asciidoc_inline/test/corpus/link_macro.txt
=================
link_macro
=================

this is a link:vvv[] and mailto:bbb[ccc]

-----

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (target)))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (macro_name)
      (target)
      (attr
        (positional_attr)))))

=========================
empty target followed by text
=========================

link:[https://example.com/resources/]Research backs

-----

(inline
  (inline_element
    (inline_macro
      (macro_name)
      (attr
        (positional_attr
          (autolink
            (uri
              (link_url)))))))
  (inline_element
    (word))
  (inline_element
    (word)))
