tree-sitter-asciidoc_inline/test/corpus/replacement.txt
===========
replacement
===========

(C)

(R)

(TM)

...

`'

->

=>

<-

<=

-----

(inline
  (inline_element
    (replacement))
  (inline_element
    (replacement))
  (inline_element
    (replacement))
  (inline_element
    (replacement))
  (inline_element
    (replacement))
  (inline_element
    (replacement))
  (inline_element
    (replacement))
  (inline_element
    (replacement))
  (inline_element
    (replacement)))
